got events to schedule from frontend

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "hoot-client/build",
     "ignore": [
       "firebase.json",
       "**/.*",
