--- a/hoot-client/package.json
+++ b/hoot-client/package.json
@@ -10,11 +10,16 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "jwt-decode": "^3.1.2",
+    "live-server": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-id-generator": "^3.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
